<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:isScrollContainer="true"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    tools:context=".ui.movieInfo.MovieInfoActivity"
    tools:showIn="@layout/activity_movie_info">

    <ImageView
        android:id="@+id/ivBackdropImage"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:contentDescription="@string/backdrop_image_description"
        android:scaleType="fitXY"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:src="@tools:sample/avatars" />

    <ImageView
        android:id="@+id/ivPosterImage"
        android:layout_width="150dp"
        android:layout_height="200dp"
        android:layout_margin="16dp"
        android:contentDescription="@string/poster_image_description"
        android:scaleType="fitXY"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/ivBackdropImage"
        tools:src="@tools:sample/avatars" />

    <TextView
        android:id="@+id/tvMovieTitle"
        android:layout_width="180dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="20dp"
        android:fontFamily="sans-serif"
        android:textSize="18sp"
        android:textStyle="bold"
        app:layout_constraintStart_toEndOf="@+id/ivPosterImage"
        app:layout_constraintTop_toBottomOf="@+id/ivBackdropImage" />

    <TextView
        android:id="@+id/tvReleaseDate"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:textSize="12sp"
        app:layout_constraintStart_toEndOf="@+id/ivPosterImage"
        app:layout_constraintTop_toBottomOf="@+id/tvMovieTitle" />

    <ImageView
        android:id="@+id/ivStar"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="16dp"
        android:contentDescription="@string/star"
        android:src="@drawable/ic_star_24dp"
        app:layout_constraintStart_toEndOf="@+id/ivPosterImage"
        app:layout_constraintTop_toBottomOf="@+id/tvReleaseDate" />

    <TextView
        android:id="@+id/tvVote"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginTop="16dp"
        android:textColor="#2196F3"
        android:textSize="18sp"
        app:layout_constraintStart_toEndOf="@+id/ivStar"
        app:layout_constraintTop_toBottomOf="@+id/tvReleaseDate" />

    <TextView
        android:id="@+id/tvOverviewTitle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="16dp"
        android:text="@string/overview_title"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/ivPosterImage" />

    <TextView
        android:id="@+id/tvOverviewText"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="16dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tvOverviewTitle" />

</androidx.constraintlayout.widget.ConstraintLayout>